@@ -8,6 +8,13 @@ release fixes the same issue for 128-bit integers.
            pi_deleglise_rivat(int128_t x), pi_gourdon(int128_t x).
 * test/api.cpp: Add more pi(-n) tests.
 * test/api_c.cpp: Add more primecount_pi(-n) tests.
+* test/pi_cache.cpp: Add new test.
+* test/pi_deleglise_rivat.cpp: Add new test.
+* test/pi_gourdon.cpp: Add new test.
+* test/pi_legendre.cpp: Add new test.
+* test/pi_lmo5.cpp: Add new test.
+* test/pi_lmo_parallel.cpp: Add new test.
+* test/pi_meissel.cpp: Add new test.
 * CMakeLists.txt: Disable building libprimesieve examples.
 
 Changes in primecount-7.7, 2023-03-26
